--- a/ReOrganizedJune10/Assignments/Assignment-One.Rmd
+++ b/ReOrganizedJune10/Assignments/Assignment-One.Rmd
@@ -2,20 +2,40 @@
 title: "Assignment for Week One"
 author: "Data and Computing Fundamentals"
 date: "Macalester College"
-output: html_document
+output:
+  html_document:
+    css: ~/KaplanFiles/DCF-2014/ReOrganizedJune10/CSS/DCF-style.css
+    fig_caption: yes
+    toc: yes
 ---
 
-1. Using the RStudio editor, create an R/Markdown document.  The Rmd document should be named `AssignmentOne.Rmd`.
-    a. Find two data-oriented graphics.  Give a URL link to them, or include them in the Rmd document.  Describe briefly the topic the graphics apply to and what is the form of the data underlying the graphics. Taking a picture of a graph in a textbook is perfectly acceptable.
-    #. Find a schematic graphic oriented toward science.  Here's an example, drawn from Wikpedia: **PERHAPS FROM DETECTION THRESHOLD OR FROM MICHAELIS-MENTON DYNAMICS or CONSUMPTION/PRODUCTION FUNCTIONS.  Include that graphic in your document
-#. Read the notes on [*Starting with R*](../CourseNotes/Rbasics/R-Basics.Rmd).
+```{r child="/Users/kaplan/KaplanFiles/DCF-2014/ReOrganizedJune10/CSS/DCF-common.Rmd"}
+```
+
+
+1. Using the RStudio editor, create an R/Markdown document.  The Rmd document should be named `AssignmentOne.Rmd`. The document you **hand-in** should be named `AssignmentOne.html`.
+    a. Find two **data-oriented** graphics.  Give a URL link to them, or include them in the Rmd document.  Describe briefly the topic the graphics apply to and what is the form of the data underlying the graphics. Taking a picture of a graph in a textbook is perfectly acceptable.  Here are some examples drawn from Wikipedia.
+    
+    Biochemistry | Economics
+    -------------|------------
+    <img src="http://upload.wikimedia.org/wikipedia/commons/7/70/Lineweaver-Burke_plot.svg" width="150px"/> | <img src="http://upload.wikimedia.org/wikipedia/commons/c/cf/Phillips_curve.jpg" width="200px" /> 
+    [Source](http://upload.wikimedia.org/wikipedia/commons/7/70/Lineweaver-Burke_plot.svg) | [Source](http://upload.wikimedia.org/wikipedia/commons/c/cf/Phillips_curve.jpg)
+
+    b. Find a **schematic** graphic oriented toward science. Include that graphic in your document.  Here are a couple of examples, drawn from Wikipedia:  
+
+    Biochemistry | Economics
+    -------------|------------
+    <img src="http://upload.wikimedia.org/wikipedia/commons/b/b0/Michaelis-Menten_saturation_curve_of_an_enzyme_reaction_LARGE.svg" width="150px"/>" | <img src="http://upload.wikimedia.org/wikipedia/commons/7/7a/Supply-and-demand.svg" width="100px" />
+    [source](http://en.wikipedia.org/wiki/Michaelis%E2%80%93Menten_kinetics#mediaviewer/File:Michaelis-Menten_saturation_curve_of_an_enzyme_reaction_LARGE.svg) | [source](http://commons.wikimedia.org/wiki/File:Supply-and-demand.svg#mediaviewer/File:Supply-and-demand.svg)
+   
+2. Read the notes on [*Starting with R*](../CourseNotes/Rbasics/R-Basics.Rmd).
     a. Do these exercises based on the notes.  Put your answers in the `AssignmentOne.Rmd` file, giving a subsection header (`###`) for each exercise.
         1. [Names and Strings](../Exercises/Introductory/2013-08-12-DTK-View-String.html)
         #. [World Cities](../Exercises/Introductory/2013-08-12-DTK-World-Cities.html)
         #. [Seatbelts](../Exercises/Introductory/2013-08-12-DTK-Seatbelts.html)
         #. [Sleep Data](../Exercises/Introductory/2013-08-12-DTK-msleep.html)
 #. Read the notes on *[File Types, Data, and Documents](../CourseNotes/DataOrganization/FileTypes.html).*.  Do these exercises:
-    a. The first
+    a. Use `file.choose()` in the console to find the full path name of this Rmd file.  Paste the result into the answers you are writing in this document.
     #. the second ... 
 #. Enter the information on how long you worked in the [time log](https://docs.google.com/forms/d/1lH02nfMVvVmCxyus3TBHQvG58pV-cGDEcTfaBJAIk3k/viewform). [The class's data are viewable [here](https://docs.google.com/spreadsheets/d/1ROnT3PBL_iVguJQPKrGAXncf-wHKzEYHQQtE7c6JYG4/pubhtml).]
     
